<?xml version="1.0" encoding="utf-8"?>

<!-- 
	Micro Manager, an open source file manager for the Android system
    Copyright (C) 2011  Mehdi Sohrabi <a.micromanager@gmail.com> <http://mehdok.blogspot.com>

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>. 
-->

<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <CheckBoxPreference
	android:key="toggleHiddenFile"
	android:title="@string/show_hidden_files"
	android:summary="@string/toggle_hidden_files"
	android:defaultValue="true"/>
  <EditTextPreference
  	android:key="thumbnailSize"
  	android:title="@string/thumbnail_size"
  	android:summary="@string/thumbnail_size_in_pixel" 
  	android:numeric="integer" 	
  	android:defaultValue="64"/>
  <EditTextPreference
  	android:key="textSize"
  	android:title="@string/text_size"
  	android:numeric="integer"
  	android:defaultValue="14"/>
  <ListPreference
  	android:key="language"
  	android:title="@string/language"
  	android:summary="@string/lang_summery"
  	android:entries="@array/language"
  	android:entryValues="@array/lang_short"
  	android:dialogTitle="@string/lang_summery"
  	android:defaultValue="@string/english_short"/>
  <PreferenceCategory 
  	android:title="@string/gui_color">
	<PreferenceScreen
		android:key="guiColor"
		android:title="@string/gui_color"
		android:summary="@string/gui_color_summery">
	<Preference
  		android:key="textColor"
  		android:title="@string/text_color"/>
  	<Preference
  		android:key="backColor1"
  		android:title="@string/back_color_1"/>
  	<Preference
  		android:key="backColor2"
  		android:title="@string/back_color_2"/>
	</PreferenceScreen>
  </PreferenceCategory> 
  <PreferenceCategory
  	android:title="@string/reset_setting">
  	<Preference
  		android:key="resetSetting"
  		android:title="@string/reset_setting"
  		android:summary="@string/reset_setting_summery"/>
  </PreferenceCategory>
  	
</PreferenceScreen>
